# Audiere

./: .gitignore  CMakeLists.txt  HowTo-expertmm-WIP.txt  HowTo-expertmm.md  HowTo-poikilos.md  README.md  SConstruct  bootstrap  build.sh  configure.ac  configure.in  full-release.sh  make-release-sgi.sh  make-release-win32.sh  runme_before_automake
bindings/python/: setup.py
cmake/: FindLibFLAC.cmake
doc/: authors.txt  changelog.txt  readme-tpreece.txt  release-howto.txt  small-buffers.txt
doc/doxygen/: audiere-devel.doxy  audiere-users.doxy  doxygen-dist.sh  mainpage.doxy
etc/: runme_before_automake
etc/release_notes_history/: 1.10.1.md
examples/wxPlayer/: DeviceFrame.cpp
src/: CMakeLists.txt  audiere.rc  device.cpp  device_coreaudio.cpp  input_aiff.cpp  input_mp3.cpp  input_wav.cpp  utility.cpp
test/race/: race.cpp
